# behave

./: .gitignore  README.md  buf.gen.yaml  buf.yaml  package.json
examples/nextjs-agent/: buf.gen.yaml  buf.yaml  package.json  tsconfig.json
examples/nextjs-agent/app/: page.tsx
examples/nextjs-agent/behave/actions/print/v1/: client.ts  print.proto
examples/nextjs-agent/behave/actions/sequence/v1/: agent.ts  sequence.proto
examples/nextjs-agent/behave/actions/v1/: actions.proto  common.proto
examples/nextjs-agent/behave/context/v1/: context.proto
examples/nextjs-agent/behave/estimation/v1/: estimation.proto
examples/nextjs-agent/behave/server/v1/: server.proto
proto/behave/core/behavior/v1/: behavior.proto
rust/behave/: Cargo.toml
rust/behave-types/: Cargo.toml
rust/behave/src/: action.rs  main.rs
rust/behave/src/actions/: noop.rs
std/: buf.gen.yaml  buf.yaml  package.json  tsconfig.json
std/behaviors/print/v1/: types.proto  view.tsx
std/behaviors/sequence/v1/: types.proto
std/behaviors/text/v1/: types.proto
typescript/client/: package.json
typescript/client/src/: client.ts
typescript/core/: package.json
typescript/core/behave/core/behavior/v1/: behavior_connect.d.ts  behavior_connect.js  behavior_pb.js
typescript/server/: package.json
typescript/server/src/: connect.ts  server.ts
typescript/types/: package.json
typescript/types/behave/core/behavior/v1/: behavior_pb.d.ts
