[package]
name = "behave"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.0", features = ["full", "tracing"] }
iceoryx2 = { version = "0.4.1", features = ["logger_tracing"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.0" }

[build]
rustflags = ["--cfg", "tokio_unstable"]
